RE #75: - Screen header and breadcrumbs will now cutoff with ellipsis - Set table bottom margin to .25rem, also manually added mb-0 to dark and striped example tables - Fixed main nav dropdown border for light nav

--- a/src/components/main-nav/styles.scss
+++ b/src/components/main-nav/styles.scss
@@ -226,7 +226,10 @@
   .navbar-main-wrapper .navbar-nav .nav-link:hover {
     position: relative;
     background: $white;
-    box-shadow: inset 1px 0 0 0 $gray-600, inset -1px 0 0 0 $gray-600, 0 1px 0px 0 $navbar-theme-light;
+    box-shadow: inset 1px 0 0 0 $gray-600, inset -1px 0 0 0 $gray-600, inset 0 -1px 0 0 rgba(0,0,0,0.1);
+  }
+  .navbar-main-wrapper .navbar-nav .dropdown:hover .nav-link {
+    box-shadow: inset 1px 0 0 0 $gray-600, inset -1px 0 0 0 $gray-600, 0 1px 0 0 $navbar-theme-light;
   }
   .navbar-dark .dropdown:hover .nav-link:before {
     background-color: $navbar-theme-dark-dropdown;
